--- a/css/login.css
+++ b/css/login.css
@@ -74,9 +74,10 @@ h2 {
   color: #22223b;
 }
 
+/* Login */
 .login-page {
   width: 360px;
-  padding: 8% 0 0;
+  padding: 5% 0 0;
   margin: auto;
 }
 .form {
