--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,7 @@
 /* Palette colours: 22223b, 4a4e69, f2e9e4, 9a8c98, c9ada7*/
 :root {
     --text-primary: #f2e9e4;
+    --text-secondary: #3B3B22;
     --bg: #22223b;
     --bg-secondary: #9a8c98;
 }
@@ -17,7 +18,7 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: var(--bg);
+    background-color: var(--text-primary);
     color: var(--text-primary);
     font-family: mont;
 }
@@ -27,6 +28,7 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 0px 9%;
+    background-color: var(--bg);
 }
 
 .logo {
@@ -72,10 +74,13 @@ header {
 
 /* --- Intro --- */
 .intro {
-    margin: 9%;
+    padding-top: 8%;
+    padding-bottom: 8%;
     font-size: large;
     display: flex;
     justify-content: center;
+    background-color: var(--bg);
+    border-radius: 0 0 500% 540%/0 0 220% 220%;
 }
 
 .intro .container {
@@ -91,7 +96,7 @@ header {
     width: 125px;
     height: 50px;
     border-radius: 100px;
-    margin: 5px;
+    margin-top: 20px;
     transition: background-color 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
 }
 
@@ -103,4 +108,36 @@ header {
 .intro button:active {
     background-color: #fff6f1;
     color: #4a4e69;
+}
+
+#typing {
+    height: 90px;
+}
+
+/* --- Main Content --- */
+.homeContent {
+    padding-top: 8%;
+    padding-bottom: 8%;
+    font-size: large;
+    display: flex;
+    justify-content: center;
+    color: var(--text-secondary);
+}
+
+.homeContent .container{
+    text-align: center;
+}
+
+/* --- Footer --- */
+footer {
+    padding-top: 4%;
+    padding-bottom: 3%;
+    font-size: large;
+    background-color: var(--bg);
+    color: var(--text-primary);
+    text-align: center;
+}
+
+footer a {
+    text-decoration-color: var(--text-primary);
 }
