--- a/css/home.css
+++ b/css/home.css
@@ -160,6 +160,10 @@ header {
     display: block;
 }
 
+#login a{
+    background-color: var(--bg-secondary);
+}
+
 #register {
     color: var(--text-primary);
     background-color: #ab6060;
@@ -167,6 +171,10 @@ header {
     font-size: 20px;
     transition: background-color 0.5s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
     display: block;
+}
+
+#register a {
+    background-color: #ab6060;
 }
 
 /* --- Intro --- */
