--- a/css/finance.css
+++ b/css/finance.css
@@ -355,7 +355,7 @@ main .income-expense-btn .add-product:hover {
     top: 50%;
     left: 50%;
     display: none;
-    transform: translate(-50%,-50%) scale(1.25);
+    transform: translate(-50%,-50%) scale(1);
     width: 380px;
     padding: 20px 30px;
     background: #9e9ed0;
@@ -573,39 +573,24 @@ main .recent-activity button:hover {
 }
 
 /* ---------- Right budget content ---------- */
-.right .budget-goals {
+.right .spending-stats {
     margin-top: 1.5rem;
 }
 
-.right .budget-goals h2{
-    margin-bottom: 1rem;
+.right .spending-stats h2{
+    margin-bottom: 0.5rem;
 }
 
-.right .budget-goals .goals {
+.right .spending-stats h3{
+    margin-bottom: 0.5rem;
+}
+
+.right .spending-stats .goals {
     background-color: var(--bg-light);
     padding: var(--card-padding);
     border-radius: var(--card-border-radius);
     box-shadow: var(--box-shadow);
     transition: all 350ms ease;
-}
-
-.right .budget-goals .goals:hover {
-    box-shadow: none;
-}
-
-.right .budget-goals .goals .goal {
-    display: flex;
-    justify-content: space-between;
-    gap: 1rem;
-    margin: 1rem;
-}
-
-.right .budget-goals a {
-    text-align: center;
-    display: block;
-    margin: 1rem auto;
-    color: var(--links);
-    font-weight: 600;
 }
 
 /* ---------- Right tracking content ---------- */
