--- a/css/budget.css
+++ b/css/budget.css
@@ -23,6 +23,7 @@
     --border-radius-3: 1.2rem;
 
     --card-padding: 1.8rem;
+    --card-padding2: 1rem;
     --padding-1: 1.2rem;
 
     --box-shadow: 0 2rem 3rem var(--text-3);
@@ -294,4 +295,467 @@ aside .sidebar a:hover {
 
 aside .sidebar a:hover span {
     margin-left: 1rem;
+}
+
+/* ---------- Main Popup ----------*/
+
+.popup {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    display: none;
+    transform: translate(-50%,-50%) scale(1);
+    width: 380px;
+    padding: 20px 30px;
+    background: #9e9ed0;
+    box-shadow: var(--box-shadow);
+    border-radius: 10px;
+    color: var(--account-bg);
+}
+
+.popup.active {
+    top: 50%;
+    display: block;
+    transform: translate(-50%,-50%) scale(1);
+}
+
+#popup-close-budget {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 15px;
+    height: 15px;
+    text-align: center;
+    line-height: 15px;
+    border-radius: 15px;
+    cursor: pointer;
+}
+
+.popup .form h2{
+    text-align: center;
+    margin: 10px 0px 20px;
+    font-size: 25px;
+}
+
+
+.popup .form .form-element {
+    margin: 15px 0px;
+}
+
+.popup .form .form-element label {
+    font-size: 20px;
+}
+
+.popup .form .form-element-select {
+    font-size: 20px;
+    margin: 15px 0px;
+    display: flex;
+    gap: 3rem;
+    align-items: center;
+}
+
+.popup .form .form-element-select select {
+    font-size: 15px;
+    border-radius: 10px;
+    color: var(--bg);
+    padding: 10px;
+}
+
+
+.popup .form .form-element input[type='date']{
+    background: transparent;
+    color: var(--account-bg);
+}
+
+.popup .form .form-element input[type="text"],
+.popup .form .form-element input[type='date']
+{
+    margin-top: 5px;
+    display: block;
+    width: 100%;
+    padding: 10px;
+    outline: none;
+    border: 1px solid var(--bg);
+    border-radius: 5px;
+}
+
+.form button {
+    text-transform: uppercase;
+    outline: 0;
+    background: #58915a;
+    width: 100%;
+    border: none;
+    border-radius: 10px;
+    padding: 15px;
+    color: #FFFFFF;
+    font-size: 15px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+}
+
+.form button:hover,.form button:active,.form button:focus {
+    background: #43A047;
+}
+
+/* ------- Main Budgeting ---------- */
+
+main {
+    margin-top: 1.4rem;
+}
+
+main .budget-btn {
+    display: flex;
+    margin-top: 1rem;
+    gap: 1rem;
+}
+
+main .budget-btn .add-btn {
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+main .budget-btn .budget {
+    border: 2.5px dashed #d6860e;
+    color: #d6860e;
+}
+
+main .budget-btn .savings {
+    border: 2.5px dashed var(--bg-3);
+    color: var(--bg-3);
+}
+
+main .budget-btn .add-btn div {
+    display: flex;
+    align-items: center;
+    gap: 0.6rem;
+}
+
+main .budget-btn .add-btn{
+    background-color: var(--bg-light);
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+    padding: 1.4rem var(--card-padding);
+    border-radius: var(--border-radius-3);
+    box-shadow: var(--box-shadow);
+    transition: all 350ms ease;
+}
+
+main .budget-btn .add-btn:hover {
+    box-shadow: none;
+}
+
+
+/* ---------- Main Table ----------*/
+
+main .budget-activity {
+    margin-top: 1.3rem;
+}
+
+main .budget-activity h2{
+    margin-bottom: 1rem;
+}
+
+.budget-activity .budgetGraph {
+    display: flex;
+    justify-content: center;
+}
+
+main .recent-activity {
+    margin-top: 1.3rem;
+}
+
+/* ---------- Main budget card ----------*/
+
+main .trackedBudget {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.2rem;
+}
+
+main .trackedBudget > div {
+    background: var(--bg-light);
+    padding: var(--card-padding2);
+    border-radius: var(--card-border-radius);
+    margin-top: 1rem;
+    box-shadow: var(--box-shadow);
+    transition: all 300ms ease;
+}
+
+main .trackedBudget > div:hover {
+    box-shadow: none;
+}
+
+main .trackedBudget > div span {
+    background: var(--bg-3);
+    padding: 0.5rem;
+    border-radius: 50%;
+    color: whitesmoke;
+    font-size: 1.6rem;
+}
+
+main .trackedBudget > div .middle {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+main .trackedBudget h3 {
+    margin: 1rem 0 0.6rem;
+    font-size: 1rem;
+}
+
+main .trackedBudget .progress {
+    position: relative;
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+}
+
+main .trackedBudget .progress .number {
+    position: absolute;
+    top: 0;
+    left: 0.2rem;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main .trackedBudget small{
+    margin-top: 1rem;
+    display: block;
+}
+
+.remaining-budget .iconBox{
+    display: flex;
+    justify-content: space-between;
+}
+
+.iconBox .delete-budget {
+    background-color: var(--colour-danger);
+}
+
+.iconBox .delete-budget:hover {
+    background-color: #d12c3a;
+}
+
+/* ---------- Right top content ---------- */
+
+.right {
+    margin-top: 1.4rem;
+}
+
+.right .top {
+    display: flex;
+    justify-content: end;
+    gap: 1.5rem;
+}
+
+.right .top button {
+    display: none;
+}
+
+.right .colour-toggle {
+    background: var(--text-3);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 1.6rem;
+    width: 4.2rem;
+    cursor: pointer;
+    border-radius: var(--border-radius-1);
+    color: var(--bg-dark)
+}
+
+.right .colour-toggle span {
+    font-size: 1rem;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.right .colour-toggle span.active {
+    background-color: var(--bg-3);
+    color: var(--text-primary);
+    border-radius: var(--border-radius-1);
+}
+
+.right .top .profile{
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+    text-align: right;
+    margin-right: 1rem;
+}
+
+/* ---------- Right budget content ---------- */
+.right .spending-stats {
+    margin-top: 1.5rem;
+}
+
+.right .spending-stats h2{
+    margin-bottom: 0.5rem;
+}
+
+.right .spending-stats h3{
+    margin-bottom: 0.5rem;
+}
+
+.right .spending-stats .goals {
+    background-color: var(--bg-light);
+    padding: var(--card-padding);
+    border-radius: var(--card-border-radius);
+    box-shadow: var(--box-shadow);
+    transition: all 350ms ease;
+}
+
+/* ---------- Right budget content ---------- */
+.right .budget-note {
+    margin-top: 1.4rem;
+}
+
+.right .budget-note h2{
+    margin-bottom: 1rem;
+}
+
+.right .budget-note .notes {
+    max-height: 20rem;
+    overflow: auto;
+    padding: 4px;
+}
+
+.right .budget-note .item {
+    background-color: var(--bg-light);
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+    padding: 1.4rem 1rem;
+    border-radius: var(--border-radius-3);
+    box-shadow: 0 .1rem 3rem #dfd7e6;
+    transition: all 350ms ease;
+
+    display: grid;
+    grid-template-columns: 2fr auto;
+}
+
+.right .budget-note .item:hover {
+    box-shadow: none;
+}
+
+.right .budget-note .item .info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+}
+
+.right .budget-note .add-product {
+    background-color: transparent;
+    border: 2.5px dashed var(--bg-3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.right .budget-note .add-product div {
+    display: flex;
+    align-items: center;
+    gap: 0.6rem;
+}
+
+.right .budget-note a {
+    text-align: center;
+    display: block;
+    margin: 1rem auto;
+    color: var(--links);
+    font-weight: 600;
+}
+
+/* ---------- Card content ---------- */
+
+.card-container {
+    display: flex;
+    color: var(--bg);
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.card {
+    background-color: var(--bg-light);
+    width: 300px;
+    margin-top: 10px;
+    margin-inline: 10px;
+    border-radius: 15px;
+    box-shadow: var(--box-shadow);
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+.card:hover {
+    box-shadow: none;
+    transition: all 300ms ease;
+}
+
+.card-img {
+    height: 200px;
+    margin-bottom: 5px;
+    background-size: cover;
+    border-radius: 15px;
+}
+
+.card-content {
+    flex-grow: 1;
+    margin-top: 0.5rem;
+    padding-inline: 1rem;
+    margin-bottom: 2rem;
+}
+
+.card-link {
+    margin-top: auto;
+}
+
+.card .card-content h2 {
+    margin-top: 5px;
+}
+
+.card .card-content p {
+    margin-top: 15px;
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+.card .card-link a {
+    text-decoration: none;
+    background-color: var(--bg);
+    color: var(--text-primary);
+    padding: 15px 20px;
+    display: block;
+    text-align: center;
+    margin: 20px 50px;
+    flex-grow: 1;
+    border-radius: 100px;
+}
+
+.card .card-link a:hover {
+    background-color: #4c4c82;
+    color: var(--text-primary);
+    border-radius: 100px;
+    cursor: pointer;
+}
+
+.card a.active {
+    background-color: #4c4c82;
+    color: var(--text-primary);
+    border-radius: 100px;
+    cursor: pointer;
 }
