--- a/css/accountTrack.css
+++ b/css/accountTrack.css
@@ -1,3 +1,4 @@
+/* Palette colours: 22223b, 4a4e69, f2e9e4, 9a8c98, c9ada7*/
 :root {
     --text-primary: #f2e9e4;
     --text-secondary: #3B3B22;
@@ -297,56 +298,48 @@ aside .sidebar a:hover span {
     margin-left: 1rem;
 }
 
-/* ---------- Main Popup ----------*/
+/* ---------- Main ---------- */
+main {
+    margin-top: 1.4rem;
+}
 
-.popup {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    display: none;
-    transform: translate(-50%,-50%) scale(1);
-    width: 380px;
+main .center .track {
+    width: 500px;
     padding: 20px 30px;
-    background: #9e9ed0;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    background-color: var(--bg-light);
     box-shadow: var(--box-shadow);
     border-radius: 10px;
     color: var(--account-bg);
 }
 
-.popup.active {
-    top: 50%;
-    display: block;
-    transform: translate(-50%,-50%) scale(1);
+main .center .track:hover {
+    box-shadow: none;
 }
 
-#popup-close-budget {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    width: 15px;
-    height: 15px;
-    text-align: center;
-    line-height: 15px;
-    border-radius: 15px;
-    cursor: pointer;
+main h2 {
+    margin-top: 1.3rem;
 }
 
-.popup .form h2{
-    text-align: center;
-    margin: 10px 0px 20px;
-    font-size: 25px;
+.center {
+    display: flex;
+    justify-content: center;
 }
 
+.track .form {
+    color: var(--bg);
+}
 
-.popup .form .form-element {
+.track .form .form-element {
     margin: 15px 0px;
 }
 
-.popup .form .form-element label {
+.track .form .form-element label {
     font-size: 20px;
 }
 
-.popup .form .form-element-select {
+.track .form .form-element-select {
     font-size: 20px;
     margin: 15px 0px;
     display: flex;
@@ -354,7 +347,7 @@ aside .sidebar a:hover span {
     align-items: center;
 }
 
-.popup .form .form-element-select select {
+.track .form .form-element-select select {
     font-size: 15px;
     border-radius: 10px;
     color: var(--bg);
@@ -362,13 +355,13 @@ aside .sidebar a:hover span {
 }
 
 
-.popup .form .form-element input[type='date']{
+.track .form .form-element input[type='date']{
     background: transparent;
     color: var(--account-bg);
 }
 
-.popup .form .form-element input[type="text"],
-.popup .form .form-element input[type='date']
+.track .form .form-element input[type="text"],
+.track .form .form-element input[type='date']
 {
     margin-top: 5px;
     display: block;
@@ -398,86 +391,13 @@ aside .sidebar a:hover span {
     background: #43A047;
 }
 
-/* ------- Main Budgeting ---------- */
-
-main {
-    margin-top: 1.4rem;
-}
-
-main .budget-btn {
-    display: flex;
-    margin-top: 1rem;
-    gap: 1rem;
-}
-
-main .budget-btn .add-btn {
-    background-color: transparent;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-}
-
-main .budget-btn .budget {
-    border: 2.5px dashed #d6860e;
-    color: #d6860e;
-}
-
-main .budget-btn .savings {
-    border: 2.5px dashed var(--bg-3);
-    color: var(--bg-3);
-}
-
-main .budget-btn .add-btn div {
-    display: flex;
-    align-items: center;
-    gap: 0.6rem;
-}
-
-main .budget-btn .add-btn{
-    background-color: var(--bg-light);
-    align-items: center;
-    gap: 1rem;
-    margin-bottom: 1rem;
-    padding: 1.4rem var(--card-padding);
-    border-radius: var(--border-radius-3);
-    box-shadow: var(--box-shadow);
-    transition: all 350ms ease;
-}
-
-main .budget-btn .add-btn:hover {
-    box-shadow: none;
-}
-
-
-/* ---------- Main Table ----------*/
-
-main .budget-activity {
-    margin-top: 1.3rem;
-}
-
-main .budget-activity h2{
-    margin-bottom: 1rem;
-}
-
-.budget-activity .budgetGraph {
-    display: flex;
-    justify-content: center;
-}
-
-main .recent-activity {
-    margin-top: 1.3rem;
-}
-
-/* ---------- Main budget card ----------*/
-
-main .trackedBudget {
+main .insights {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1.2rem;
 }
 
-main .trackedBudget > div {
+main .insights > div {
     background: var(--bg-light);
     padding: var(--card-padding2);
     border-radius: var(--card-border-radius);
@@ -486,11 +406,11 @@ main .trackedBudget > div {
     transition: all 300ms ease;
 }
 
-main .trackedBudget > div:hover {
+main .insights > div:hover {
     box-shadow: none;
 }
 
-main .trackedBudget > div span {
+main .insights > div span {
     background: var(--bg-3);
     padding: 0.5rem;
     border-radius: 50%;
@@ -498,25 +418,62 @@ main .trackedBudget > div span {
     font-size: 1.6rem;
 }
 
-main .trackedBudget > div .middle {
+main .insights > div.expense span {
+    background: var(--colour-danger);
+}
+
+main .insights > div.income span {
+    background: var(--colour-success);
+}
+
+main .insights > div .middle {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-main .trackedBudget h3 {
+main .insights h3 {
     margin: 1rem 0 0.6rem;
     font-size: 1rem;
 }
 
-main .trackedBudget .progress {
+main .insights .progress {
     position: relative;
     width: 90px;
     height: 90px;
     border-radius: 50%;
 }
 
-main .trackedBudget .progress .number {
+main .insights svg{
+    width: 6rem;
+    height: 6rem;
+    margin: 0.2rem;
+}
+
+main .insights svg circle{
+    fill: none;
+    stroke: var(--bg-3);
+    stroke-width: 12;
+    stroke-linecap: round;
+    transform: translate(5px, 5px);
+}
+
+main .insights .remaining-budget svg circle{
+    stroke-dasharray: 110;
+    stroke-dashoffset: 92;
+}
+
+main .insights .expense svg circle{
+    stroke-dasharray: 110;
+    stroke-dashoffset: 22;
+}
+
+main .insights .income svg circle{
+    stroke-dasharray: 190;
+    stroke-dashoffset: 92;
+}
+
+main .insights .progress .number {
     position: absolute;
     top: 0;
     left: 0.2rem;
@@ -527,22 +484,57 @@ main .trackedBudget .progress .number {
     align-items: center;
 }
 
-main .trackedBudget small{
+main .insights small{
     margin-top: 1rem;
     display: block;
 }
 
-.remaining-budget .iconBox{
-    display: flex;
-    justify-content: space-between;
+/* ---------- Main ---------- */
+
+main .recent-activity {
+    margin-top: 2.3rem;
 }
 
-.iconBox .delete-budget {
-    background-color: var(--colour-danger);
+main .recent-activity h2{
+    margin-bottom: 1rem;
 }
 
-.iconBox .delete-budget:hover {
-    background-color: #d12c3a;
+main .recent-activity table{
+    background: var(--bg-light);
+    width: 100%;
+    border-radius: var(--card-border-radius);
+    padding: var(--card-padding);
+    text-align: center;
+    box-shadow: var(--box-shadow);
+    transition: all 350ms ease;
+
+}
+
+main .recent-activity table:hover{
+    box-shadow: none;
+}
+
+main table thead th {
+    font-size: medium;
+}
+
+main table tbody td {
+    height: 2.8rem;
+    border-bottom: 1px solid var(--bg-3);
+    color: var(--bg);
+    font-size: medium;
+}
+
+main table tbody tr:last-child td {
+    border: none;
+}
+
+main .recent-activity a {
+    text-align: center;
+    display: block;
+    margin: 2rem auto;
+    color: var(--links);
+    font-weight: 600;
 }
 
 /* ---------- Right top content ---------- */
@@ -597,19 +589,15 @@ main .trackedBudget small{
 }
 
 /* ---------- Right budget content ---------- */
-.right .spending-stats {
+.right .budget-goals {
     margin-top: 1.5rem;
 }
 
-.right .spending-stats h2{
-    margin-bottom: 0.5rem;
+.right .budget-goals h2{
+    margin-bottom: 1rem;
 }
 
-.right .spending-stats h3{
-    margin-bottom: 0.5rem;
-}
-
-.right .spending-stats .goals {
+.right .budget-goals .goals {
     background-color: var(--bg-light);
     padding: var(--card-padding);
     border-radius: var(--card-border-radius);
@@ -617,62 +605,18 @@ main .trackedBudget small{
     transition: all 350ms ease;
 }
 
-/* ---------- Right budget content ---------- */
-.right .budget-note {
-    margin-top: 1.4rem;
-}
-
-.right .budget-note h2{
-    margin-bottom: 1rem;
-}
-
-.right .budget-note .notes {
-    max-height: 20rem;
-    overflow: auto;
-    padding: 4px;
-}
-
-.right .budget-note .item {
-    background-color: var(--bg-light);
-    align-items: center;
-    gap: 1rem;
-    margin-bottom: 1rem;
-    padding: 1.4rem 1rem;
-    border-radius: var(--border-radius-3);
-    box-shadow: 0 .1rem 3rem #dfd7e6;
-    transition: all 350ms ease;
-
-    display: grid;
-    grid-template-columns: 2fr auto;
-}
-
-.right .budget-note .item:hover {
+.right .budget-goals .goals:hover {
     box-shadow: none;
 }
 
-.right .budget-note .item .info {
+.right .budget-goals .goals .goal {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    margin: 0;
+    gap: 1rem;
+    margin: 1rem;
 }
 
-.right .budget-note .add-product {
-    background-color: transparent;
-    border: 2.5px dashed var(--bg-3);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-}
-
-.right .budget-note .add-product div {
-    display: flex;
-    align-items: center;
-    gap: 0.6rem;
-}
-
-.right .budget-note a {
+.right .budget-goals a {
     text-align: center;
     display: block;
     margin: 1rem auto;
@@ -758,4 +702,13 @@ main .trackedBudget small{
     color: var(--text-primary);
     border-radius: 100px;
     cursor: pointer;
+}
+
+/* ---------- Media Query ---------- */
+@media screen and (max-width: 1400px) {
+    .container {
+        width: 92%;
+        grid-template-columns: 14rem auto 20rem;
+        margin: 0 20px;
+    }
 }
