--- a/css/savings.css
+++ b/css/savings.css
@@ -183,16 +183,20 @@ header {
 }
 
 .intro {
-    padding-top: 3%;
-    padding-bottom: 3%;
+    padding-top: 6%;
+    padding-bottom: 8%;
     font-size: large;
     display: flex;
     justify-content: center;
-    color: var(--bg);
+    color: var(--text-primary);
+    background-color: var(--bg);
+    border-radius: 0 0 500% 540%/0 0 220% 220%;
+    box-shadow: 3rem 3rem 2rem var(--text-3);
+    margin-bottom: 8rem;
 }
 
 .intro .container {
-    margin-right: 15%;
+    margin-top: 1px;
 }
 
 .intro .container > * {
@@ -205,11 +209,14 @@ header {
     margin-bottom: 20px;
 }
 
+/* --- Cards --- */
+
 .card-container {
     display: flex;
     color: var(--bg);
     justify-content: center;
     flex-wrap: wrap;
+    margin-bottom: 10rem;
 }
 
 .card {
@@ -280,3 +287,19 @@ header {
     cursor: pointer;
 }
 
+/* --- Footer --- */
+footer {
+    padding-top: 4%;
+    padding-bottom: 3%;
+    font-size: large;
+    background-color: var(--bg);
+    color: var(--text-primary);
+    text-align: center;
+    box-shadow: 0 -2rem 2rem var(--text-3);
+    border-radius: 120% 120% 0 0/75% 75% 0 0;
+}
+
+footer a {
+    color: var(--colour-danger);
+    text-decoration: none;
+}
