--- a/css/trackings.css
+++ b/css/trackings.css
@@ -1,4 +1,3 @@
-/* Palette colours: 22223b, 4a4e69, f2e9e4, 9a8c98, c9ada7*/
 :root {
     --text-primary: #f2e9e4;
     --text-secondary: #3B3B22;
@@ -16,9 +15,18 @@
     --colour-danger: #e75461;
     --colour-success: #31ad84;
     --colour-warning: #f0950e;
+    --colour-warking-dark: #ad6d0d;
     --colour-info-dark: #39393d;
 
-    --box-shadow: 3rem 3rem 2rem var(--text-3);
+    --card-border-radius: 2rem;
+    --border-radius-1: 0.4rem;
+    --border-radius-2: 0.8rem;
+    --border-radius-3: 1.2rem;
+
+    --card-padding: 1.8rem;
+    --padding-1: 1.2rem;
+
+    --box-shadow: 0 2rem 3rem var(--text-3);
     --alternate-shadow: #1d1d5a;
 }
 
@@ -31,14 +39,10 @@
     src: url(../Fonts/Montserrat-VariableFont_wght.ttf);
 }
 
-html {
-    scroll-behavior: smooth;
-}
-
 body{
     margin: 0;
     padding: 0;
-    background-color: var(--account-bg);
+    background-color: var(--bg);
     color: var(--text-primary);
     font-family: mont;
 }
@@ -57,6 +61,7 @@ header {
 }
 
 .navbar {
+    overflow: hidden;
     padding: 15px;
 }
 
@@ -133,7 +138,7 @@ header {
 }
 
 #myAccount:hover {
-    background-color: #278868;
+    background-color: #23785c;
     color: #fff6f1;
 }
 
@@ -186,7 +191,6 @@ header {
     justify-content: center;
     background-color: var(--bg);
     border-radius: 0 0 500% 540%/0 0 220% 220%;
-    box-shadow: var(--box-shadow);
 }
 
 .intro .container {
@@ -216,140 +220,6 @@ header {
     color: #4a4e69;
 }
 
-#typing {
-    height: 90px;
-}
-
-/* --- Main Content --- */
-.slideshow {
-    color: var(--text-secondary);
-    font-size: large;
-}
-
-.slides {
-    /* --- hides slides --- */
-    display: none;
-    padding-top: 7%;
-    padding-bottom: 2%;
-    text-align: center;
-    transition: 0.5s ease;
-}
-
-.slides .container {
-    display: flex;
-    align-items: center;
-}
-
-.slides .container img{
-    width: 30%;
-    height: auto;
-    margin-right: 20px;
-    margin-left: 10%;
-}
-
-.slide-text {
-    text-align: left;
-    flex-grow: 1;
-    padding-left: 5%;
-}
-
-.slide-text h1{
-    margin-top: 0;
-    color: var(--bg);
-}
-
-.slide-text p{
-    margin-right: 25%
-}
-
-@media (max-width: 800px) {
-    .slides .container {
-      flex-direction: column;
-    }
-  
-    .slides .container img {
-      width: 100%;
-      margin-right: 0;
-      margin-bottom: 20px;
-    }
-  }
-
-.prev, .next {
-    cursor: pointer;
-    top: 50%;
-    width: auto;
-    margin-top: -30px;
-    padding: 16px;
-    color: #888;
-    font-weight: bold;
-    font-size: 20px;
-    border-radius: 3px 3px 3px 3px;
-    user-select: none;
-}
-
-.prev:hover, .next:hover {
-    background-color: #928d8a;
-    color: var(--text-secondary);
-}
-
-.dots-box {
-    text-align: center;
-    padding: 15px;
-}
-
-.dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-    background-color: #717171;
-}
-
-.homeContent {
-    padding-top: 8%;
-    padding-bottom: 8%;
-    font-size: large;
-    display: flex;
-    justify-content: center;
-    color: var(--bg);
-}
-
-.homeContent .container{
-    text-align: center;
-}
-
-.slideshow button {
-    background-color: var(--bg-secondary);
-    color: var(--text-primary);
-    font-size: large;
-    cursor: pointer;
-    border: none;
-    width: auto;
-    height: 50px;
-    border-radius: 100px;
-    margin-top: 20px;
-    padding-inline: 20px;
-    transition: background-color 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
-    box-shadow: .5 .5rem .6rem var(--text-3);
-}
-
-.slideshow  button:hover {
-    background-color: #4a4e69;
-    color: #fff6f1;
-}
-
-.slideshow  button:active {
-    background-color: #fff6f1;
-    color: #4a4e69;
-}
-
 /* --- Footer --- */
 footer {
     padding-top: 4%;
@@ -366,3 +236,4 @@ footer a {
     color: var(--colour-danger);
     text-decoration: none;
 }
+
